# littleTest

./: README.md
go_test/: README.md
go_test/main/: ContextTest.go  fortest.go  funcBiBao.go  goroutine.go  interface.go  map.go  range.go  recursion.go  shuzu.go  slice.go  struct.go  syncTest.go  test.go  zhizhen.go  zhizhen1.go  zhizhen2.go
go_test/main/reflctTest/: value&typeTest.go
go_test/main/restFulTest/: go.mod  (+1 more)
kurbernets/: 1.yaml  README.md  test.ipynb  test.py
kurbernets/k8s_yamls/: bigalphaservice.yaml  ppe-bigalphaservice.yaml  traderservice.yaml
ladp_test/: README.md  csc_ladp.py  ldap.py  test.py
opncv_test/: README.md  string_image.py  string_movie.py  tt.py
pydanticTest/: 1.py  基础使用BaseModel.ipynb
python_test/chatgpt_api/: README.md  main.py  requirements.txt
python_test/searchs/: README.md  search1.py
python_test/single_link/: README.md  circle_link_list.py  combine_link.py  delete_link.py  link_list.py  node.py  skip_list.py
python_test/sorts/: README.md  sort1.py  sort2.py  sort3.py
rust_test/: README.md
rust_test/hello-world/: main.rs
rust_test/rusty-journal/: Cargo.toml  test-journal.json
rust_test/rusty-journal/src/: tasks.rs
sanic/: README.md  app.py  my_blueprint.py
scrapy_test/: cookie_test.py  css_test.py  img_test.py  kzcourse_spider.py  movie.xml  pyppeteer_test.py  sign_test.py  svg_test.py  user_agent_test.py  webdriver_test.py  woff_test.py
split_video/: main.py
syncSqlAlchemyTest/: README.md  test_sqlalchemy_async.py  test_sqlalchemy_async_orm.py
test_ddddocr/: test.py
watchdog_test/: file_watch.py
(+18 files in other folders)
