[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
home = "0.5"
structopt = "0.3.26"
serde_json = "1.0.86"

[dependencies.chrono]
features = ["serde"]
chrono = "0.4.22"

[dependencies.serde]
features = ["derive"]
version = "1.0.86"
